# dorea

./: .gitignore  Cargo.toml  README.md  compare.py  config.yaml  dorea.toml  dump_depth.py  investigate_artifacts.py  requirements.txt
crates/dorea-cal/: Cargo.toml
crates/dorea-cal/src/: format.rs  lib.rs
crates/dorea-cli/: Cargo.toml  build.rs
crates/dorea-cli/src/: calibrate.rs  change_detect.rs  config.rs  grade.rs  lib.rs  main.rs  optical_flow.rs  preview.rs  probe.rs
crates/dorea-cli/src/pipeline/: calibration.rs  feature.rs  grading.rs  keyframe.rs  mod.rs
crates/dorea-color/: Cargo.toml
crates/dorea-color/src/: dlog_m.rs  hsv.rs  ilog.rs  lab.rs  lib.rs  lut_transfer.rs
crates/dorea-gpu/: Cargo.toml  build.rs
crates/dorea-gpu/benches/: grade_bench.rs
crates/dorea-gpu/src/: batcher.rs  cpu.rs  device.rs  lib.rs
crates/dorea-gpu/src/cuda/: combined_lut.rs  guided_filter.rs  mod.rs
crates/dorea-gpu/src/cuda/kernels/: build_combined_lut.cu  clarity.cu  combined_lut.cu  grade_pixel.cuh  guided_filter.cu  hsl_correct.cu  lut_apply.cu
crates/dorea-hsl/: Cargo.toml
crates/dorea-hsl/src/: apply.rs  derive.rs  lib.rs  qualifiers.rs
crates/dorea-lut/: Cargo.toml
crates/dorea-lut/src/: apply.rs  build.rs  lib.rs  types.rs
crates/dorea-video/: Cargo.toml
crates/dorea-video/src/: ffmpeg.rs  inference.rs  inference_subprocess.rs  lib.rs  resize.rs  scene.rs
crates/dorea-video/src/inference/: pyo3_backend.rs
docs/decisions/: 2026-04-03-combined-lut-cuda-texture-design.md  2026-04-03-cuda-grader-buffer-pre-allocation.md
docs/guides/: maxine-setup.md
docs/plans/: 2026-04-03-combined-lut-cuda-texture-plan.md  2026-04-03-cuda-grader-buffer-pre-allocation.md  2026-04-03-pcie-sync-barrier-reduction.md
luts/: underwater_base.cube
python/: pyproject.toml
python/dorea_inference/: __init__.py  __main__.py  bridge.py  depth_anything.py  export_onnx.py  maxine_enhancer.py  nv12_to_rgb.py  protocol.py  raune_filter.py  raune_net.py  server.py  trt_engine.py  yolo_seg.py
python/tests/: test_bench_compare.py  test_bench_nvtx.py  test_bench_parser.py  test_bench_schema.py  test_bridge_maxine.py  test_infer_batch.py  test_lifecycle_server.py  test_maxine_protocol.py  test_maxine_server.py  test_nvdec.py  test_raune_filter.py  test_trt_engine.py
scripts/: 00_generate_lut.py  01_extract_frames.py  01b_estimate_white_balance.py  02_claude_scene_analysis.py  03_run_sam2.py  04_run_depth.py  05_resolve_setup.py  create_drx_template.py  generate_references.py  pipeline_utils.py  preview_lut.py  run_all.sh
scripts/bench/: README.md  compare.py  run.py  schema.py  sysstate.py
scripts/bench/results/: .gitignore
tests/: conftest.py  test_preview_lut.py  test_resolve_setup.py
