[workspace]
resolver = "2"
members = [
    "crates/dorea-cli",
    "crates/dorea-color",
    "crates/dorea-lut",
    "crates/dorea-hsl",
    "crates/dorea-cal",
    "crates/dorea-video",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
dorea-color = { path = "crates/dorea-color" }
dorea-lut = { path = "crates/dorea-lut" }
dorea-hsl = { path = "crates/dorea-hsl" }
dorea-cal = { path = "crates/dorea-cal" }
dorea-video = { path = "crates/dorea-video" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
