[workspace]
resolver = "2"
members = [
    "crates/dorea-cli",
    "crates/dorea-video",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
dorea-video = { path = "crates/dorea-video" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
toml = "0.8"
