[package]
name = "dorea-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dorea"
path = "src/main.rs"

[dependencies]
dorea-video = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
serde = { workspace = true }
toml = { workspace = true }
