[package]
name = "dorea-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
dorea-color = { workspace = true }
dorea-lut = { workspace = true }
dorea-hsl = { workspace = true }
dorea-cal = { workspace = true }
log.workspace = true
rayon.workspace = true
thiserror.workspace = true

[features]
# Declared so Cargo recognises `#[cfg(feature = "cuda")]` as a valid condition.
# Activation is driven by build.rs (nvcc detection), NOT by Cargo feature flags.
# Do NOT pass --features cuda manually; build.rs handles it.
cuda = []
