[package]
name = "dorea-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
dorea-color = { workspace = true }
dorea-lut = { workspace = true }
dorea-hsl = { workspace = true }
dorea-cal = { workspace = true }
log.workspace = true
rayon.workspace = true
thiserror.workspace = true

cudarc = { version = "0.12", features = ["driver"], optional = true }

[features]
# Activation is driven by build.rs (nvcc detection), NOT by Cargo feature flags.
# Do NOT pass --features cuda manually; build.rs handles it.
cuda = ["dep:cudarc"]
