[package]
name = "dorea-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
dorea-color = { workspace = true }
dorea-lut = { workspace = true }
dorea-hsl = { workspace = true }
dorea-cal = { workspace = true }
log.workspace = true
rayon.workspace = true
thiserror.workspace = true

cudarc = { version = "0.12", features = ["driver", "nvrtc", "dynamic-linking", "cuda-12040"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "grade_bench"
harness = false

[features]
# Declared so Cargo recognises `#[cfg(feature = "cuda")]` as a valid condition.
# Activation is driven by build.rs (nvcc detection), NOT by Cargo feature flags.
# Do NOT pass --features cuda manually; build.rs handles it.
cuda = []
